[tool.poetry]
name = "course-4"
version = "0.1.0"
description = ""
authors = ["elena_vagner <dipnoe@gmail.com>"]
readme = "README.md"
packages = [{include = "course_4"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
